boilerplate with sync actions

--- a/src/components/Header/styles.styl
+++ b/src/components/Header/styles.styl
@@ -24,11 +24,9 @@ $blue = #000080
   margin 0 auto
   max-width 900px
 
-.small
-  display inline-block
-  font-size .7em
-  width 39px
-  height 40px
+.title
+  font-size 1.3em
+  font-weight bold
 
 .caption
   font-size .8em
