Remastered development flow

--- a/src/components/Header/styles.styl
+++ b/src/components/Header/styles.styl
@@ -19,18 +19,16 @@ $blue = #000080
   font-size 1.5em
   padding 1.5em 0
 
-.title
-  font-size 1.3em
-  font-weight bold
+.red
+  margin-right -20px
+  font-size 220px
+  font-weight 800
+  color red
+  opacity .6
 
-.caption
-  font-size .8em
-  padding .2em .6em
-
-.emoji
-  vertical-align middle
-  font-size 1.5em
-  margin-left 4px
-  animation bounce 1.3s infinite ease-out
-  transform-origin: 56.6% 56.6%;
-
+.blue
+  margin-left -20px
+  font-size 220px
+  font-weight 900
+  color blue
+  opacity .6
