--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -1,7 +1,7 @@
 @import 'normalize.css';
 
 body
-  font-family "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
+  font-family 'raleway', sans-serif
   font-size 19px
   min-width 320px
 
