made it the hacky way

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -5,11 +5,9 @@ body
   font-size 19px
   min-width 320px
 
-a
-  color $blue
-
+a,
 a:visited
-  color inherit
+  color blue
 
 li
   list-style none
